# LearningCMake

./: .gitignore  CMakeLists.txt  LearningCMake.rc  README.md  resource.h
HelloCMake/: CMakeLists.txt
HelloCMake/source/: HelloCMake.cpp  HelloCMake.h
LibraryUsage/: CMakeLists.txt
LibraryUsage/source/: LibraryUsage.cpp
StaticAndSharedLibrary/: CMakeLists.txt
StaticAndSharedLibrary/source/: StaticAndSharedLibrary.cpp  StaticAndSharedLibrary.h  StaticAndSharedLibrary_EXPORTS.h
cmakeHello/src/: CMakeLists.txt  cmakeHello.cpp  cmakeHello.h
dynamicLib/: CMakeLists.txt
dynamicLib/src/: dynamicLib.cpp  dynamicLib.h  dynamicLib_EXPORTS.h
libUsage/: CMakeLists.txt
libUsage/src/: libUsage.cpp
staticLib/: CMakeLists.txt
staticLib/src/: staticLib.cpp  staticLib.h
